--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,10 +4,10 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
-        <meta name="description" content="Profesjonalny import i sprzedaż aut dostawczych: furgony, brygadowe, kontenery, chłodnie, minibusy. Dostawa pod dom. Smyków – obsługa całej Polski." />
+        <meta name="description" content="FHU FRANKO - Sprzedaż busów dostawczych, użytkowych i minibusów. Import z krajów UE: Niemcy, Holandia, Belgia, Dania. Sprawdzone pojazdy z pełną dokumentacją." />
         <meta name="keywords" content="busy dostawcze, samochody użytkowe, minibusy, furgony, import aut, FHU FRANKO, pojazdy dostawcze, busy z UE" />
         <meta name="author" content="FHU FRANKO" />
-        <meta property="og:title" content="FHU FRANKO – Autohandel BUSY/DOSTAWCZE" />
+        <meta property="og:title" content="FHU FRANKO - Sprzedaż busów" />
         <meta property="og:description" content="Sprzedaż busów dostawczych i użytkowych. Import z krajów UE. Sprawdzone pojazdy z pełną dokumentacją." />
         <meta property="og:type" content="website" />
         <!--
@@ -23,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-        <title>FHU FRANKO – Autohandel BUSY/DOSTAWCZE | Sprawdzone pojazdy LCV, VAT 23%, gwarancja</title>
+        <title>FHU FRANKO - Sprzedaż busów</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
