Licznik: pokaż realną liczbę ogłoszeń z Supabase (count=exact)

--- a/fhufranko-main 2/bowdowa/index.html
+++ b/fhufranko-main 2/bowdowa/index.html
@@ -2,4 +2,5 @@
 <script src="env.js"></script>
 <script src="ads_live.js?v=1760378114"></script>
 <script src="hide_grid_hard.js?v=1760384572"></script>
+<script src="ads_count.js?v=1760387586"></script>
 </body></html>
