Ogloszenia: realny licznik z Supabase + ukrycie paginacji i cyfr w filtrach

--- a/fhufranko-main 2/bowdowa/index.html
+++ b/fhufranko-main 2/bowdowa/index.html
@@ -3,4 +3,5 @@
 <script src="ads_live.js?v=1760378114"></script>
 <script src="hide_grid_hard.js?v=1760384572"></script>
 <script src="ads_count.js?v=1760387586"></script>
+<script src="ads_count_fix.js?v=1760388127"></script>
 </body></html>
